# Backup

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  tenants.example.yaml
.github/workflows/: docker.yml  test.yml
scripts/: scheduler_runner.py
src/m365_backup/: __init__.py  db.py  main.py  scheduler.py  search.py  tasks.py  web.py
src/m365_backup/static/: catppuccin.css
src/m365_backup/templates/: backup.html  index.html  message_detail.html  search.html  snapshot.html  tenant_form.html  tenants.html
tests/: test_config.py
